# boto-lite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  STATE.md  audit_fix.txt  audit_fix_2.txt  benchmark_runtime.py  benchmark_tokens.py  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
src/boto_lite/: __init__.py  _client.py  exceptions.py  s3.py  secrets.py  sqs.py
tests/: __init__.py  test_bound_clients.py  test_client.py  test_integration.py  test_observability.py  test_s3.py  test_s3_upload_stream.py  test_secrets.py  test_secrets_cache.py  test_sqs.py  test_sqs_batch.py
